[project]
name = "cipher"
version = "0.1.0"
description = "A web application for encoding and decoding messages using various cipher algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.2.1",
    "mypy>=1.8.0"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true